--- a/vista/css/estilos.css
+++ b/vista/css/estilos.css
@@ -2,7 +2,7 @@
    /*background: url(http://i62.tinypic.com/2e3ybe1.jpg) no-repeat right center;*/
    height: 34px;
    width: 240px;
-}
+/*}
 html, body{
 	margin: 0;
 	padding: 0;
@@ -14,7 +14,7 @@ html, body{
 body{
 	background-color: #343434;
 	font-family: 'Roboto', sans-serif;
-}
+}*/
 
 #contenido{
 	width: 100%;
