--- a/vista/css/estilosmenu.css
+++ b/vista/css/estilosmenu.css
@@ -4,7 +4,8 @@
 }
 
 body{
-  background: #FFFFFA;
+  background-image: url("../assets/img/backgrounds/madera.jpg");
+  color: #fff;
 }
 
 header{
@@ -14,7 +15,7 @@ header{
 header nav { /*Color del Menu*/
   width: 90%;
   max-width: 1000px;
-  margin: 20px auto;
+  /*margin: 5px auto;*/
   background: #9E7438;
 }
 
