--- a/vista/css/estilosmenu.css
+++ b/vista/css/estilosmenu.css
@@ -4,7 +4,7 @@
 }
 
 body{
-  background-image: url("../assets/img/backgrounds/madera.jpg");
+  background-image: url("../assets/img/backgrounds/madera3.jpg");
   color: #fff;
 }
 
@@ -15,8 +15,8 @@ header{
 header nav { /*Color del Menu*/
   width: 90%;
   max-width: 1000px;
-  /*margin: 5px auto;*/
-  background: #9E7438;
+  margin: 5px auto;
+  background: #1A1A1A;
 }
 
 .menu_bar{ /*Esconde div menu_bar*/
@@ -24,8 +24,14 @@ header nav { /*Color del Menu*/
 }
 
 header nav ul{ /*Quita Viñetas*/
+  width: auto;
   overflow: hidden;
   list-style: none;
+}
+
+header nav ul li img{
+  width: 150px;
+  height: 50px;
 }
 
 header nav ul li{
@@ -34,7 +40,7 @@ header nav ul li{
 
 header nav ul li a{
   color: #fff;
-  padding: 20px;
+  padding: 15px;
   display: block;
   text-decoration: none;
 }
@@ -45,15 +51,16 @@ header nav ul li span{
 
 header nav ul li a:hover{ /*Color al pasar el mouse*/
   background: #EC971F;
+  color: #fff
 }
 
 section{
   padding: 20px;
 }
 
-@media screen and (max-width:800px){
+/*@media screen and (max-width:800px){
   header nav{
-    width: 80%;
+    width: 90%;
     height: 100%;
     left: -100%;
     margin: 0;
@@ -75,7 +82,7 @@ section{
   .menu_bar .bt-menu{
     display: block;
     padding: 20px;
-    background: #9E7438;
+    background: #000000;
     color: #fff;
     text-decoration: none;
     font-weight: bold;
@@ -89,4 +96,4 @@ section{
     float: right;
     font-size: 40px;
   }
-}
+}*/
